--- a/style.css
+++ b/style.css
@@ -1,6 +1,127 @@
-body {
-  padding:0; margin:0;
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+
+
+*{
+  padding: 0;
+  margin: 0;
+  font-family: "Times New Roman", Times, serif;
 }
+body {
+  background-image: url("Capture.png");
+}
+
+/*h1{
+  margin-top: 30px;
+  text-align: center;
+}*/
+
+
+
+h1{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bolder;
+  letter-spacing: 5px;
+  margin-bottom: 20px;
+  position: relative;
+  animation: text 3s 1;
+  background: black;
+
+}
+
+h2{
+  text-align: center;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 7px;
+  margin-bottom: 20px;
+}
+
+h3{
+  text-align: center;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 7px;
+  margin-bottom: 40px;
+}
+
+h4{
+  text-align: left;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: 4px;
+  margin-bottom: 40px;
+}
+
+@keyframes text {
+  0%{
+    margin-bottom: -40px;
+  }
+  30%{
+    letter-spacing: 25px;
+    margin-bottom: -40px;
+  }
+  85%{
+    letter-spacing: 8px;
+    margin-bottom: -40px;
+  }
+}
+.message{
+  position: absolute;
+  left: 10px;
+  width: 50%;
+}
+.item-1, 
+.item-2, 
+.item-3 {
+  position: absolute;
+  display: block;
+  left: 50em;
+  top: 10em;
+  font-family: "Times New Roman", Times, serif;
+  letter-spacing: 5px;
+  width: 100%;
+  font-style: italic;
+
+  animation-duration: 20s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+.item-1{
+  animation-name: anim-1;
+  font-size: 17px;
+}
+
+.item-2{
+  animation-name: anim-2;
+  font-size: 17px;
+}
+
+.item-3{
+  animation-name: anim-3;
+  font-size: 17px;
+}
+
+@keyframes anim-1 {
+  0%, 8.3% { left: -100%; opacity: 0; }
+  8.3%,25% { left: 25%; opacity: 1; }
+  33.33%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-2 {
+  0%, 33.33% { left: -100%; opacity: 0; }
+  41.63%, 58.29% { left: 25%; opacity: 1; }
+  66.66%, 100% { left: 110%; opacity: 0; }
+}
+
+@keyframes anim-3 {
+  0%, 66.66% { left: -100%; opacity: 0; }
+  74.96%, 91.62% { left: 25%; opacity: 1; }
+  100% { left: 110%; opacity: 0; }
+}
+
 #layout { 
   color:#FFF; height:600px; width:100%; height:100%; 
 }
@@ -8,6 +129,7 @@ body {
   z-index: 0; position: absolute;
   background-image: url(   http://www.14denoviembre.es/img/hori.png ), url( http://www.14denoviembre.es/img/stars_5.png );
 }
+
 :root {
   --space-color: #0f2437;
   --earth-water-color: #2276bc;
@@ -15,7 +137,7 @@ body {
   --earth-cloud-color: #FFF;
   --earth-rotation: 20000ms;
   --cloud-rotation: 30000ms;
-
+  
   --moon-color: #e6e8d2;
 }
 
@@ -163,7 +285,7 @@ background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
   0% {
     transform: translate(-200px);
   }
-
+  
   100% {
     transform: translate(250px);
   }
@@ -173,7 +295,7 @@ background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
   0% {
     transform: translate(0px);
   }
-
+ 
   100% {
     transform: translate(150px);
   }
@@ -183,7 +305,7 @@ background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
   0% {
     transform: translate(-350px);
   }
-
+ 
   100% {
     transform: translate(100px);
   }
@@ -204,7 +326,7 @@ background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
   0% {
     transform: translate(-150px);
   }
-
+  
   100% {
     transform: translate(250px);
   }
@@ -223,7 +345,7 @@ background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
   0% {
     transform: translate(-200px);
   }
-
+  
   100% {
     transform: translate(150px);
   }
@@ -599,34 +721,14 @@ SED Innovations
 https://sed.am
 https://mkrtchyan.ga
 ================================================================================================= */
-* {
-    margin: 0;
-    padding: 0;
-}
-header {
-    background-color:rgba(33, 33, 33, 0.9);
-    color:#ffffff;
-    display:block;
-    font: 14px/1.3 Arial,sans-serif;
-    height:50px;
-    position:relative;
-    z-index:5;
-}
-/*h2{
+
+h2{
+    position: absolute;
+    bottom: 70px;
+    left: 100px;
     margin-top: 30px;
-    text-align: center;
+    color: white;
 }
-header h2{
-    font-size: 22px;
-    margin: 0 auto;
-    padding: 10px 0;
-    width: 80%;
-    text-align: center;
-}
-header a, a:visited {
-    text-decoration:none;
-    color:#fcfcfc;
-}*/
 
 @keyframes move-twink-back {
     from {background-position:0 0;}
@@ -662,7 +764,117 @@ header a, a:visited {
     to {background-position:10000px 0;}
 }
 
-.clouds {
+/* Global Button Styles */
+a.animated-button:link, a.animated-button:visited {
+  position: relative;
+  display: block;
+  margin: 30px auto 0;
+  padding: 14px 15px;
+  color: #fff;
+  font-size:14px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  letter-spacing: .08em;
+  border-radius: 0;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+}
+a.animated-button:link:after, a.animated-button:visited:after {
+  content: "";
+  position: absolute;
+  height: 0%;
+  left: 50%;
+  top: 50%;
+  width: 150%;
+  z-index: -1;
+  -webkit-transition: all 0.75s ease 0s;
+  -moz-transition: all 0.75s ease 0s;
+  -o-transition: all 0.75s ease 0s;
+  transition: all 0.75s ease 0s;
+}
+a.animated-button:link:hover, a.animated-button:visited:hover {
+  color: #FFF;
+  text-shadow: none;
+}
+a.animated-button:link:hover:after, a.animated-button:visited:hover:after {
+  height: 450%;
+}
+a.animated-button:link, a.animated-button:visited {
+  position: relative;
+  display: block;
+  margin: 30px auto 0;
+  padding: 14px 15px;
+  color: #fff;
+  font-size:14px;
+  border-radius: 0;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  letter-spacing: .08em;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+/* Victoria Buttons */
+
+a.animated-button.victoria-one {
+  position: relative;
+  bottom: 50px;
+  border: 2px solid #D24D57;
+
+}
+a.animated-button.victoria-one:after {
+  background: #D24D57;
+  -moz-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+  -ms-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+  transform: translateX(-50%) translateY(-50%) rotate(-25deg);
+}
+a.animated-button.victoria-two {
+  position: relative;
+  bottom: 50px;
+  left: 130px;
+  border: 2px solid #D24D57;
+}
+a.animated-button.victoria-two:after {
+  background: #D24D57;
+  -moz-transform: translateX(-50%) translateY(-50%) rotate(25deg);
+  -ms-transform: translateX(-50%) translateY(-50%) rotate(25deg);
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(25deg);
+  transform: translateX(-50%) translateY(-50%) rotate(25deg);
+}
+
+a.animated-button.victoria-four {
+  position: relative;
+  bottom: 50px;
+  left: 270px;
+  border: 2px solid #D24D57;
+}
+a.animated-button.victoria-four:after {
+  background: #D24D57;
+  opacity: .5;
+  -moz-transform: translateY(-50%) translateX(-50%) rotate(90deg);
+  -ms-transform: translateY(-50%) translateX(-50%) rotate(90deg);
+  -webkit-transform: translateY(-50%) translateX(-50%) rotate(90deg);
+  transform: translateY(-50%) translateX(-50%) rotate(90deg);
+}
+a.animated-button.victoria-four:hover:after {
+  opacity: 1;
+  height: 600% !important;
+}
+
+/*.clouds {
   position:absolute;
   top:0;
   left:0;
@@ -677,9 +889,11 @@ header a, a:visited {
   background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
   z-index:0;
 }
+
 .twinkling{
   background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
   z-index:1;
+
   -moz-animation:move-twink-back 200s linear infinite;
   -ms-animation:move-twink-back 200s linear infinite;
   -o-animation:move-twink-back 200s linear infinite;
@@ -687,7 +901,7 @@ header a, a:visited {
   animation:move-twink-back 200s linear infinite;
 }*/
 
-.clouds{
+/*.clouds{
     background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
     z-index:3;
 
@@ -697,3 +911,5 @@ header a, a:visited {
   -webkit-animation:move-clouds-back 200s linear infinite;
   animation:move-clouds-back 200s linear infinite;
 }
+
+
